[gd_scene load_steps=7 format=2]

[ext_resource path="res://images/character/NULL/errored.png" type="Texture" id=1]
[ext_resource path="res://scripts/actor/master_actor.gd" type="Script" id=2]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
params_specular_mode = 4
params_depth_draw_mode = 1
albedo_texture = ExtResource( 1 )
emission_enabled = true
emission = Color( 1, 1, 1, 1 )
emission_energy = 0.0
emission_operator = 0
emission_on_uv2 = false
ao_enabled = true
ao_light_affect = 0.0
ao_on_uv2 = false
ao_texture_channel = 0

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
flags_unshaded = true
flags_do_not_receive_shadows = true
albedo_color = Color( 0, 0, 0, 1 )
albedo_texture = ExtResource( 1 )

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
flags_unshaded = true
flags_disable_ambient_light = true
params_cull_mode = 1
albedo_color = Color( 0, 0, 0, 1 )
albedo_texture = ExtResource( 1 )

[node name="master_actor" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0806379, 0 )
script = ExtResource( 2 )

[node name="front_image" type="MeshInstance" parent="."]
transform = Transform( 6.1, 0, 0, 0, -4.37114e-08, -10.1, 0, 1, -4.41485e-07, 0, 10.0572, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="shadow_image" type="MeshInstance" parent="."]
transform = Transform( 6.1, 0, 0, 0, -4.37114e-08, -10.1, 0, 1, -4.41485e-07, 0, 10.0569, -0.2 )
lod_max_distance = 4932.0
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="shadow_image_mirror" type="MeshInstance" parent="."]
transform = Transform( 6.1, 0, 0, 0, -4.37114e-08, -10.1, 0, 1, -4.41485e-07, 0, 10.0569, -0.0253248 )
lod_max_distance = 111.0
mesh = SubResource( 1 )
material/0 = SubResource( 4 )
